--- a/optimlib_docs_cg.html
+++ b/optimlib_docs_cg.html
@@ -109,7 +109,7 @@ pre {
     <div class="col-md-2"></div>
     <div class="col-md-8">
 
-<p>The Nonlinear Conjugate Gradient (CG) method generalizes its <a href="https://en.wikipedia.org/wiki/Conjugate_gradient_method">linear namesake</a> to a broader class of convex optimization problems.</p>
+<p>The Nonlinear Conjugate Gradient (CG) method generalizes its <a href="https://en.wikipedia.org/wiki/Conjugate_gradient_method" target="_blank">linear namesake</a> to a broader class of convex optimization problems.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
