--- a/statslib.html
+++ b/statslib.html
@@ -138,6 +138,7 @@ pre {
 <ul>
     <li><a href="#distributions">Distributions</a></li>
     <li><a href="#installation">Download and Installation</a></li>
+    <li><a href="#jupyter-notebook">Jupyter Notebook</a></li>
     <li><a href="#options">Options</a></li>
     <li><a href="#syntax-and-examples">Syntax and Examples</a></li>
     <li><a href="#compile-time-computation-capabilities">Compile-time Computation Capabilities</a></li>
@@ -202,6 +203,16 @@ cd ./stats/tests
 ./setup
 cd dens
 ./configure && make</pre>
+
+<!--  -->
+
+<hr style="height:2px;border-width:0;background-color:black">
+
+<h3 style="text-align: left;" id="jupyter-notebook"><strong style="font-size: 95%;">Jupyter Notebook</strong></h3>
+
+<p>You can test the library online using an interactive Jupyter notebook:</p>
+
+<a href="https://mybinder.org/v2/gh/kthohr/stats/master?filepath=notebooks%2Fstats.ipynb" target="_blank"><img src="https://mybinder.org/badge.svg" alt="Binder"></a>
 
 <!--  -->
 
