--- a/gcem_docs_special.html
+++ b/gcem_docs_special.html
@@ -127,7 +127,7 @@ $$\text{erf}(x) = \frac{2x}{\sqrt{\pi}} \exp(-x^2) \dfrac{1}{1 - 2x^2 + \dfrac{4
 
 <pre class="brush: cpp;"> 
 template&lt;typename T&gt;
-constexpr return_t&lt;T&gt erf_inv(const T x)
+constexpr return_t&lt;T&gt erf_inv(const T p)
 </pre>
 
 <p>Computes the inverse-Gaussian error function, a value $x$ such that</p> 
