--- a/gcem_header.html
+++ b/gcem_header.html
@@ -3,16 +3,7 @@
         <ol class="breadcrumb">
             <li><a href="https://www.kthohr.com">Home</a></li>
             <li><a href="gcem.html">GCE-Math</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="gcem_docs_basic.html">Basic functions</a></li>
-                    <li class="divider"></li>
-                    <li><a href="gcem_docs_special.html">Special functions</a></li>
-                    <li class="divider"></li>
-                    <li><a href="gcem_docs_trig.html">Trigonometric functions</a></li>
-                </ul>
-            </li>
+            <li><a href="https://gcem.readthedocs.io/en/latest/?badge=latest" target="_blank">Documentation</a></li>
         </ol>
     </div>
 </div>
