--- a/statslib.html
+++ b/statslib.html
@@ -134,7 +134,7 @@ pre {
 
 <hr>
 
-<strong>Contents</strong>
+<p><strong>Contents</strong></p>
 <ul>
     <li><a href="#distributions">Distributions</a></li>
     <li><a href="#installation">Download and Installation</a></li>
