--- a/research.html
+++ b/research.html
@@ -85,13 +85,32 @@
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4>Yogurts Choose Consumers? Identification of Random Utility Models via Two-Sided Matching</h4>
+                        <h4>Posterior Sampling in Two Classes of Multivariate Fractionally Integrated Models: Corrigendum to Ravishanker, N. and B. K. Ray (1997) Australian Journal of Statistics 39 (3), 295-311</h4>
+                        <h5>(with <a href="https://sites.google.com/site/rossdoppelt/" target="_blank">Ross Doppelt</a>)</h5>
+                        <hr style="height:2px;border-width:0;background-color:black" />
+                        <!-- <hr /> -->
+                        <h4><strong style="font-size: 90%;"><a data-toggle="collapse" href="#collapse2">Abstract</a> | <a href="docs/Doppelt_OHara_VARFIMA.pdf" target="_blank">Paper</a> </strong></h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <p>We discuss posterior sampling for two distinct multivariate generalizations of the univariate ARIMA model with fractional integration. 
+                                The existing approach to Bayesian estimation, introduced by Ravishanker and Ray (1997), claims to provide a posterior-sampling algorithm 
+                                for fractionally integrated vector autoregressive moving averages (FIVARMAs). We show that this algorithm produces posterior draws for 
+                                vector autoregressive fractionally integrated moving averages (VARFIMAs), a model of independent interest that has not previously received 
+                                attention in the Bayesian literature.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4>Yogurts Choose Consumers? Estimation of Random Utility Models via Two-Sided Matching</h4>
                         <h5>(with O. Bonnet, A. Galichon, and M. Shum)</h5>
                         <hr style="height:2px;border-width:0;background-color:black" />
                         <!-- <hr /> -->
-                        <h4><strong style="font-size: 90%;"><a data-toggle="collapse" href="#collapse2">Abstract</a> | <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2928876" target="_blank">Paper</a> </strong></h4>
+                        <h4><strong style="font-size: 90%;"><a data-toggle="collapse" href="#collapse3">Abstract</a> | <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2928876" target="_blank">Paper</a> </strong></h4>
                     </div>
-                    <div id="collapse2" class="panel-collapse collapse">
+                    <div id="collapse3" class="panel-collapse collapse">
                         <div class="panel-body">
                             <p>In this paper we show that the problem of demand inversion in multinomial choice models is equivalent to the 
                                 determination of stable outcomes in matching models. This result is very general and applies to random utility 
