--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
             <div class="col-md-6">
                 <!-- <h2>About</h2> -->
                 <!-- <br> -->
-                <p>My name is Keith O'Hara. I am a Ph.D. Candidate at <abbr title="New York University">NYU</abbr>'s Department of Economics. My primary research topics are Econometrics and Computational Methods.</p>
+                <p>My name is Keith O'Hara. I obtained my Ph.D. in Economics from <abbr title="New York University">NYU</abbr> in 2018.</p>
                 <hr>
                 <p>I am the author of several open-source C++ libraries and R packages in the areas of:</p>
                 <ul>
@@ -97,7 +97,7 @@
                     <li><a href="https://github.com/kthohr/stats" target="_blank">Statistics</a></li>
                     <li><a href="https://github.com/kthohr/optim" target="_blank">Nonlinear optimization</a></li>
                     <li><a href="https://github.com/kthohr/mcmc" target="_blank">Bayesian simulation methods</a></li>
-                    <li><a href="https://github.com/kthohr/gcem" target="_blank">Computation of special functions</a></li>
+                    <li><a href="https://github.com/kthohr/gcem" target="_blank">Compile-time computation of special functions</a></li>
                 </ul>
                 <p>Other open-source projects that I like and, on occasion, contribute to:</p>
                 <ul>
@@ -116,12 +116,12 @@
                 <!-- <h4>Contact Details</h4> -->
                 <p>My contact details are below.</p>
                 <ul>
-                    <li>If you are contacting me about an issue related to a project that is hosted on a social coding platform (like GitHub), consider using the associated Issues feature instead.</li>
+                    <li>If you are contacting me about an issue related to a project that is hosted on a social coding platform (like GitHub), consider using the associated issues feature instead.</li>
                 </ul>
                 <!-- <br> -->
-                <p><i i class="fa fa-address-card-o" aria-hidden="true"></i> 19 W 4th St<br>&nbsp; &nbsp; &nbsp; 6FL<br>&nbsp; &nbsp; &nbsp; New York, NY 10012<br>
-                </p>
-                <p><i class="fa fa-envelope-o"></i> <a href="mailto:keith.ohara@nyu.edu">&nbsp;keith.ohara@nyu.edu</a>
+                <!-- <p><i i class="fa fa-address-card-o" aria-hidden="true"></i> 19 W 4th St<br>&nbsp; &nbsp; &nbsp; 6FL<br>&nbsp; &nbsp; &nbsp; New York, NY 10012<br> -->
+                <!-- </p> -->
+                <p><i class="fa fa-envelope-o"></i> <a href="mailto:kth.ohr@gmail.com">&nbsp;kth.ohr@gmail.com</a>
                 </p>
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
