--- a/research.html
+++ b/research.html
@@ -67,6 +67,7 @@
                     <div class="panel-heading">
                         <h4>Bayesian Estimation of Fractionally Integrated Vector Autoregressions and an Application to Identified Technology Shocks</h4>
                         <h5>(with <a href="https://sites.google.com/site/rossdoppelt/" target="_blank">Ross Doppelt</a>)</h5>
+                        <h5><em>Revise and Resubmit at Journal of Econometrics</em></h5>
                         <hr style="height:2px;border-width:0;background-color:black" />
                         <!-- <hr /> -->
                         <h4><strong style="font-size: 90%;"><a data-toggle="collapse" href="#collapse1">Abstract</a> | <a href="docs/Doppelt_OHara_FIVARs.pdf" target="_blank">Paper</a> </strong></h4>
@@ -87,6 +88,7 @@
                     <div class="panel-heading">
                         <h4>Posterior Sampling in Two Classes of Multivariate Fractionally Integrated Models: Corrigendum to Ravishanker, N. and B. K. Ray (1997) Australian Journal of Statistics 39 (3), 295-311</h4>
                         <h5>(with <a href="https://sites.google.com/site/rossdoppelt/" target="_blank">Ross Doppelt</a>)</h5>
+                        <h5><em>Provisionally accepted at Australian & New Zealand Journal of Statistics</em></h5>
                         <hr style="height:2px;border-width:0;background-color:black" />
                         <!-- <hr /> -->
                         <h4><strong style="font-size: 90%;"><a data-toggle="collapse" href="#collapse2">Abstract</a> | <a href="docs/Doppelt_OHara_VARFIMA.pdf" target="_blank">Paper</a> </strong></h4>
@@ -106,6 +108,7 @@
                     <div class="panel-heading">
                         <h4>Yogurts Choose Consumers? Estimation of Random Utility Models via Two-Sided Matching</h4>
                         <h5>(with O. Bonnet, A. Galichon, and M. Shum)</h5>
+                        <h5><em>Submitted</em></h5>
                         <hr style="height:2px;border-width:0;background-color:black" />
                         <!-- <hr /> -->
                         <h4><strong style="font-size: 90%;"><a data-toggle="collapse" href="#collapse3">Abstract</a> | <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2928876" target="_blank">Paper</a> </strong></h4>
