--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
             <div class="col-md-6">
                 <!-- <h2>About</h2> -->
                 <!-- <br> -->
-                <p>My name is Keith O'Hara. I obtained my Ph.D. in Economics from <abbr title="New York University">NYU</abbr> in 2018, where my research focused on econometrics and numerical methods.</p>
+                <p>My name is Keith O'Hara. I obtained my Ph.D. in Economics from <abbr title="New York University">NYU</abbr> in 2018, where my research focused on econometrics and computational methods.</p>
                 <hr>
                 <p>I am the author of several open-source C++ libraries and R packages in the areas of:</p>
                 <ul>
